mobile responsive edits